Created and implemented project to verify secp256r1 signature in-circuit

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,24 @@
-# Java
-*.idea
+# Node modules
+**/node_modules/
 
-# Circom
-*.vscode
+# Circom/zkSNARK build artefacts
+**/build/
+**/*_js/
+*.r1cs
+*.wasm
+*.sym
+*.zkey
+*.ptau
+*.json
+*.vkey.json
+*.pkey.json
+generate_witness.js
+witness_calculator.js
+
+# OS-specific
+.DS_Store
+Thumbs.db
+
+# IDEs/editors
+.vscode/
+.idea/
