Extended zk-backend to provide additional input data for proofs; Created structure in zk-proof; Implemented bash files to provide cli interface for zk-related activities; Migrated secp256r1 proof into zk-proof

--- a/zk-backend/src/main/resources/application.yaml
+++ b/zk-backend/src/main/resources/application.yaml
@@ -44,3 +44,10 @@ blockchain:
       type: json
     storage:
       path: data/blockchain-wallets
+
+proof:
+  preparation:
+    registry:
+      type: json
+    storage:
+      path: data/proof-preparation
