--- a/zk-proof/package.json
+++ b/zk-proof/package.json
@@ -8,5 +8,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "asn1.js": "^5.4.1",
+    "base64url": "^3.0.1",
+    "circomlib": "^2.0.5"
+  }
 }
