--- a/.gitmodules
+++ b/.gitmodules
@@ -5,4 +5,4 @@
 	url = https://github.com/yi-sun/circom-pairing.git
 [submodule "circom_libs/circom-ecdsa"]
 	path = circom_libs/circom-ecdsa
-	url = https://github.com/0xPARC/circom-ecdsa.git
+	url = https://github.com/sommer-ph/circom-ecdsa.git
