Bugfixes - Wallet key for credential binding and signature verification limb representation

--- a/zk-backend/src/main/resources/application.yaml
+++ b/zk-backend/src/main/resources/application.yaml
@@ -22,7 +22,7 @@ keys:
   credential:
     binding:
       algorithm: ES256
-      generate-per-credential: true
+      generate-per-credential: false
 
 eudi:
   wallet:
