--- a/zk-proof/package.json
+++ b/zk-proof/package.json
@@ -1,22 +1,10 @@
 {
   "name": "zk-proof",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "Philipp Sommer",
+  "description": "ZK proof system for EUDI-Web3",
+  "scripts": {},
   "dependencies": {
-    "@noble/curves": "^1.9.2",
-    "@noble/secp256k1": "^2.3.0",
-    "@peculiar/webcrypto": "^1.5.0",
-    "asn1.js": "^5.4.1",
-    "base64url": "^3.0.1",
-    "circomlib": "^2.0.5",
-    "circomlibjs": "^0.1.7",
-    "poseidon-lite": "^0.3.0"
+    "circomlib": "^2.0.5"
   }
 }
