--- a/zk-recursive/Cargo.toml
+++ b/zk-recursive/Cargo.toml
@@ -1,25 +1,13 @@
 [package]
-name = "zk-recursive"
+name    = "zk-recursive"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
-nova-snark = { git = "https://github.com/microsoft/Nova" }
-nova-scotia = { git = "https://github.com/nalinbhardwaj/Nova-Scotia" }
+plonky2       = { git = "https://github.com/sommer-ph/plonky2", branch = "main" }
 
-# arkworks core crates
-ark-std = "0.5.0"
-ark-relations = "0.5.1"
-ark-r1cs-std = "0.5.0"
-ark-ff = "0.5.0"
-# BN254 and Groth16 compatibility
-ark-bn254 = "0.5.0"
-ark-groth16 = "0.5.0"
-# elliptic curve for secp256k1
-k256 = { version = "0.13.0", default-features = false, features = ["ecdsa", "sha256", "arithmetic"] }
-# HMAC and SHA512
-hmac = "0.12.1"
-sha2 = "0.10.7"
-digest = "0.10.7"
-# field conversion utils
-hex = "0.4.3"
+sha2 = "0.10"
+rand = "0.9.1"
+num-bigint = "0.4"
+num-traits = "0.2"
+once_cell = "1.19"
