--- a/zk-recursive-plonky2/Cargo.toml
+++ b/zk-recursive-plonky2/Cargo.toml
@@ -15,15 +15,23 @@ path = "src/main.rs"
 name = "generate_outer_sig_verify_data"
 path = "inputs/tools/generate_outer_sig_verify_data.rs"
 
+[[bin]]
+name = "check_outer_sig_verify_data"
+path = "inputs/tools/check_outer_sig_verify_data.rs"
+
 [dependencies]
 plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2" }
 plonky2_ecdsa = { git = "https://github.com/sommer-ph/plonky2-ecdsa", package = "plonky2_ecdsa" }
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-clap = { version = "4.0", features = ["derive"] }
+serde_json = "1.0.142"
+clap = { version = "4.5.42", features = ["derive"] }
 hex = "0.4"
 num-bigint = "0.4"
+num-traits = "0.2"
+k256 = "0.13"
+p256 = "0.13"
+sha2 = "0.10"
 
 [patch."https://github.com/0xPolygonZero/plonky2"]
 plonky2_field = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_field" }
