Implemented circuit build and proof generation metrics

--- a/zk-recursive-plonky2/Cargo.toml
+++ b/zk-recursive-plonky2/Cargo.toml
@@ -36,7 +36,7 @@ name = "check_outer_sig_verify_data"
 path = "inputs/tools/check_outer_sig_verify_data.rs"
 
 [dependencies]
-plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2" }
+plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2", features = ["timing"] }
 plonky2_ecdsa = { git = "https://github.com/sommer-ph/plonky2-ecdsa", package = "plonky2_ecdsa" }
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -48,8 +48,16 @@ num-traits = "0.2"
 k256 = "0.13"
 p256 = "0.13"
 sha2 = "0.10"
+log = "0.4.27"
+env_logger = "0.11.8"
 
 [patch."https://github.com/0xPolygonZero/plonky2"]
+plonky2_field = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_field" }
+plonky2_maybe_rayon = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_maybe_rayon" }
+plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2" }
+plonky2_util = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_util" }
+
+[patch."https://github.com/0xPARC/plonky2"]
 plonky2_field = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_field" }
 plonky2_maybe_rayon = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_maybe_rayon" }
 plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2" }
