--- a/zk-recursive-plonky2/Cargo.toml
+++ b/zk-recursive-plonky2/Cargo.toml
@@ -20,6 +20,14 @@ name = "check_outer_data"
 path = "inputs/tools/check_outer_data.rs"
 
 [[bin]]
+name = "generate_outer_extended_data"
+path = "inputs/tools/generate_outer_extended_data.rs"
+
+[[bin]]
+name = "check_outer_extended_data"
+path = "inputs/tools/check_outer_extended_data.rs"
+
+[[bin]]
 name = "generate_outer_key_der_data"
 path = "inputs/tools/generate_outer_key_der_data.rs"
 
@@ -35,9 +43,19 @@ path = "inputs/tools/generate_outer_sig_verify_data.rs"
 name = "check_outer_sig_verify_data"
 path = "inputs/tools/check_outer_sig_verify_data.rs"
 
+[[bin]]
+name = "generate_bip32_key_der_data"
+path = "inputs/tools/generate_bip32_key_der_data.rs"
+
+[[bin]]
+name = "check_bip32_key_der_data"
+path = "inputs/tools/check_bip32_key_der_data.rs"
+
 [dependencies]
 plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2", features = ["timing"] }
 plonky2_ecdsa = { git = "https://github.com/sommer-ph/plonky2-ecdsa", package = "plonky2_ecdsa" }
+plonky2_sha512 = { git = "https://github.com/sommer-ph/plonky2_sha512" }
+# Note: bincode 1.3 used for compatibility with plonky2-ecdsa ecosystem
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.142"
@@ -45,11 +63,14 @@ clap = { version = "4.5.42", features = ["derive"] }
 hex = "0.4"
 num-bigint = "0.4"
 num-traits = "0.2"
-k256 = "0.13"
+k256 = { version = "0.13", features = ["ecdsa"] }
 p256 = "0.13"
 sha2 = "0.10"
+hmac = "0.12"
 log = "0.4.27"
 env_logger = "0.11.8"
+# Note: rand 0.8 used for compatibility with plonky2-ecdsa ecosystem
+rand = "0.8"
 
 [patch."https://github.com/0xPolygonZero/plonky2"]
 plonky2_field = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2_field" }
