--- a/zk-recursive-plonky2/Cargo.toml
+++ b/zk-recursive-plonky2/Cargo.toml
@@ -11,15 +11,19 @@ path = "src/lib.rs"
 name = "zk-recursive"
 path = "src/main.rs"
 
-
 [[bin]]
 name = "generate_poseidon"
 path = "inputs/tools/generate_poseidon.rs"
+
+[[bin]]
+name = "generate_poseidon_extended"
+path = "inputs/tools/generate_poseidon_extended.rs"
 
 [dependencies]
 plonky2 = { git = "https://github.com/sommer-ph/plonky2", package = "plonky2", features = ["timing"] }
 plonky2_ecdsa = { git = "https://github.com/sommer-ph/plonky2-ecdsa", package = "plonky2_ecdsa", features = ["static-issuer"] }
 plonky2_sha512 = { git = "https://github.com/sommer-ph/plonky2_sha512" }
+plonky2_sha256 = { git = "https://github.com/sommer-ph/plonky2_sha256" }
 # Note: bincode 1.3 used for compatibility with plonky2-ecdsa ecosystem
 bincode = "1.3"
 serde = { version = "1.0", features = ["derive"] }
